refactoring of low pass filter